--- a/style.css
+++ b/style.css
@@ -37,3 +37,17 @@
     border-bottom: 5px black double;
     padding: 5px;
 }
+@media(max-width:690px){
+    .container{
+        width:650px;
+        height: 600px;
+    }
+}
+@media(max-width:390px){
+    .container{
+        width:300px;
+        height: 300px;
+        margin-right: 25%;
+    
+    }
+}
